--- a/index.html
+++ b/index.html
@@ -249,6 +249,10 @@
             transition: all 0.3s ease;
             position: relative;
             cursor: pointer;
+            aspect-ratio: 4 / 3;
+            display: flex;
+            align-items: center;
+            justify-content: center;
         }
 
         .image-item:hover {
@@ -258,13 +262,14 @@
 
         .image-item img {
             width: 100%;
-            height: auto;
+            height: 100%;
+            object-fit: cover;
             display: block;
             transition: transform 0.4s;
         }
 
         .image-item:hover img {
-            transform: scale(1.1);
+            transform: scale(1.05);
         }
 
         .hidden {
