--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
         body {
             font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, sans-serif;
-            background: linear-gradient(135deg, #e8f4f8 0%, #d0e8f0 50%, #b8dce8 100%);
+            background: linear-gradient(135deg, #1a4d1a 0%, #0d3d0d 50%, #002d00 100%);
             min-height: 100vh;
             display: flex;
             flex-direction: column;
@@ -31,7 +31,7 @@
         h1 {
             font-size: 64px;
             font-weight: 300;
-            color: #2c3e50;
+            color: #ffffff;
             margin-bottom: 60px;
             letter-spacing: 2px;
         }
@@ -44,24 +44,24 @@
         }
 
         .option-button {
-            background: #ffffff;
-            border: 2px solid #b0d4e8;
+            background: #004d00;
+            border: 2px solid #006400;
             border-radius: 12px;
             padding: 24px 32px;
             font-size: 20px;
-            color: #2c3e50;
+            color: #ffffff;
             cursor: pointer;
             transition: all 0.3s ease;
             text-decoration: none;
             display: block;
-            box-shadow: 0 4px 15px rgba(176, 212, 232, 0.2);
+            box-shadow: 0 4px 15px rgba(0, 100, 0, 0.3);
         }
 
         .option-button:hover {
-            background: #f0f8ff;
-            border-color: #90c4d8;
+            background: #006400;
+            border-color: #008000;
             transform: translateY(-2px);
-            box-shadow: 0 6px 20px rgba(176, 212, 232, 0.3);
+            box-shadow: 0 6px 20px rgba(0, 100, 0, 0.5);
         }
 
         .modal {
@@ -113,8 +113,8 @@
         }
 
         .close-button:hover {
-            background: #f0f8ff;
-            color: #4a6fa5;
+            background: #e8f5e8;
+            color: #006400;
         }
 
         .modal-title {
@@ -133,15 +133,15 @@
         .weather-location {
             margin-bottom: 30px;
             padding: 20px;
-            background: #f0f8ff;
+            background: #e8f5e8;
             border-radius: 8px;
-            border-left: 4px solid #4a6fa5;
+            border-left: 4px solid #006400;
         }
 
         .weather-location h3 {
             font-size: 24px;
             margin-bottom: 15px;
-            color: #4a6fa5;
+            color: #006400;
         }
 
         .weather-info {
@@ -159,15 +159,15 @@
             aspect-ratio: 4 / 3;
             overflow: hidden;
             border-radius: 8px;
-            border: 2px solid #b0d4e8;
+            border: 2px solid #006400;
             cursor: pointer;
             transition: all 0.3s ease;
         }
 
         .photo-item:hover {
             transform: scale(1.05);
-            border-color: #90c4d8;
-            box-shadow: 0 6px 20px rgba(176, 212, 232, 0.3);
+            border-color: #008000;
+            box-shadow: 0 6px 20px rgba(0, 100, 0, 0.4);
         }
 
         .photo-item img {
@@ -186,14 +186,14 @@
         .note-item {
             padding: 20px;
             margin-bottom: 20px;
-            background: #f0f8ff;
+            background: #e8f5e8;
             border-radius: 8px;
-            border-left: 4px solid #4a6fa5;
+            border-left: 4px solid #006400;
         }
 
         .loading {
             text-align: center;
-            color: #4a6fa5;
+            color: #006400;
             font-size: 18px;
             padding: 20px;
         }
@@ -257,12 +257,9 @@
             <h2 class="modal-title">notes</h2>
             <div id="notesContent" class="notes-content">
                 <div class="note-item">
-                    <h3>countdown timer</h3>
-                    <p>counting down to january 30, 2026 at 4:00 pm est</p>
-                </div>
-                <div class="note-item">
-                    <h3>best girl ever</h3>
-                    <p>jolene is the best girl in the world ❤️</p>
+                    <h3>thoughts about when i met you</h3>
+                    <p style="margin-top: 10px; color: #666; font-size: 14px;">1/21/2026</p>
+                    <p style="margin-top: 15px;">when i met you in algebra 1, i genuinely thought you were like the sickest girl ever and the one person who could match my energy so unbelievably well to such a caliber i like wouldn't expect from someone. you were and are so smart, so funny, so kind, and i was blown away by how you treated others with so much care and respect.</p>
                 </div>
             </div>
         </div>
@@ -353,7 +350,7 @@
 
                 content.innerHTML = `
                     <div class="weather-location">
-                        <h3>harrisonburg, va</h3>
+                        <h3>harrisonburg, va (will)</h3>
                         <div class="weather-info">
                             <p><strong>temperature:</strong> ${hburg.temperature_2m}°f</p>
                             <p><strong>conditions:</strong> ${getWeatherDescription(hburg.weather_code)}</p>
@@ -361,7 +358,7 @@
                         </div>
                     </div>
                     <div class="weather-location">
-                        <h3>penn state (state college, pa)</h3>
+                        <h3>penn state (state college, pa) (jolene)</h3>
                         <div class="weather-info">
                             <p><strong>temperature:</strong> ${ps.temperature_2m}°f</p>
                             <p><strong>conditions:</strong> ${getWeatherDescription(ps.weather_code)}</p>
