--- a/index.html
+++ b/index.html
@@ -233,6 +233,25 @@
             border: none;
         }
 
+        .music-content {
+            font-size: 18px;
+            color: #2c3e50;
+        }
+
+        .playlist-container {
+            margin-bottom: 30px;
+        }
+
+        .playlist-container:last-child {
+            margin-bottom: 0;
+        }
+
+        .playlist-container iframe {
+            width: 100%;
+            border-radius: 12px;
+            border: 2px solid #006400;
+        }
+
         @media (max-width: 768px) {
             h1 {
                 font-size: 48px;
@@ -263,6 +282,7 @@
             <button class="option-button" onclick="showPhotos()">photos</button>
             <button class="option-button" onclick="showNotes()">notes</button>
             <button class="option-button" onclick="showDistance()">distance</button>
+            <button class="option-button" onclick="showMusic()">music</button>
         </div>
     </div>
 
@@ -308,6 +328,25 @@
             <h2 class="modal-title">distance</h2>
             <div id="distanceContent" class="distance-content">
                 <div class="loading">loading distance...</div>
+            </div>
+        </div>
+    </div>
+
+    <!-- Music Modal -->
+    <div id="musicModal" class="modal">
+        <div class="modal-content">
+            <button class="close-button" onclick="closeModal('musicModal')">&times;</button>
+            <h2 class="modal-title">music</h2>
+            <div id="musicContent" class="music-content">
+                <div class="playlist-container">
+                    <iframe data-testid="embed-iframe" style="border-radius:12px" src="https://open.spotify.com/embed/playlist/5jE1hOdhcEA9wl7LK8WZDV?utm_source=generator" width="100%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+                </div>
+                <div class="playlist-container">
+                    <iframe data-testid="embed-iframe" style="border-radius:12px" src="https://open.spotify.com/embed/playlist/7G5VgdvUREXtiLFPXSi3p3?utm_source=generator" width="100%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+                </div>
+                <div class="playlist-container">
+                    <iframe data-testid="embed-iframe" style="border-radius:12px" src="https://open.spotify.com/embed/playlist/5JhcSZVG1LiAiEUCRvHJPR?utm_source=generator" width="100%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+                </div>
             </div>
         </div>
     </div>
@@ -494,6 +533,10 @@
                     <a href="https://www.openstreetmap.org/?mlat=${centerLat}&mlon=${centerLon}&zoom=7" target="_blank" style="color: #006400;">view larger map</a>
                 </p>
             `;
+        }
+
+        function showMusic() {
+            showModal('musicModal');
         }
     </script>
 </body>
