--- a/index.html
+++ b/index.html
@@ -252,6 +252,50 @@
             border: 2px solid #006400;
         }
 
+        .timeline-content {
+            font-size: 18px;
+            color: #2c3e50;
+            position: relative;
+            padding: 20px 0;
+        }
+
+        .timeline-item {
+            position: relative;
+            padding-left: 40px;
+            padding-bottom: 40px;
+            border-left: 3px solid #006400;
+        }
+
+        .timeline-item:last-child {
+            border-left: none;
+        }
+
+        .timeline-item::before {
+            content: '';
+            position: absolute;
+            left: -8px;
+            top: 0;
+            width: 16px;
+            height: 16px;
+            border-radius: 50%;
+            background: #006400;
+            border: 3px solid #ffffff;
+            box-shadow: 0 0 0 2px #006400;
+        }
+
+        .timeline-date {
+            font-size: 20px;
+            font-weight: bold;
+            color: #006400;
+            margin-bottom: 8px;
+        }
+
+        .timeline-event {
+            font-size: 16px;
+            color: #2c3e50;
+            line-height: 1.6;
+        }
+
         @media (max-width: 768px) {
             h1 {
                 font-size: 48px;
@@ -283,6 +327,7 @@
             <button class="option-button" onclick="showNotes()">notes</button>
             <button class="option-button" onclick="showDistance()">distance</button>
             <button class="option-button" onclick="showMusic()">music</button>
+            <button class="option-button" onclick="showTimeline()">timeline</button>
         </div>
     </div>
 
@@ -346,6 +391,28 @@
                 </div>
                 <div class="playlist-container">
                     <iframe data-testid="embed-iframe" style="border-radius:12px" src="https://open.spotify.com/embed/playlist/5JhcSZVG1LiAiEUCRvHJPR?utm_source=generator" width="100%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!-- Timeline Modal -->
+    <div id="timelineModal" class="modal">
+        <div class="modal-content">
+            <button class="close-button" onclick="closeModal('timelineModal')">&times;</button>
+            <h2 class="modal-title">timeline</h2>
+            <div id="timelineContent" class="timeline-content">
+                <div class="timeline-item">
+                    <div class="timeline-date">may 2026</div>
+                    <div class="timeline-event">will graduation</div>
+                </div>
+                <div class="timeline-item">
+                    <div class="timeline-date">may 2028</div>
+                    <div class="timeline-event">jolene graduation</div>
+                </div>
+                <div class="timeline-item">
+                    <div class="timeline-date">2026-2036</div>
+                    <div class="timeline-event">our 10 year plan together</div>
                 </div>
             </div>
         </div>
@@ -537,6 +604,10 @@
 
         function showMusic() {
             showModal('musicModal');
+        }
+
+        function showTimeline() {
+            showModal('timelineModal');
         }
     </script>
 </body>
