--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>will + jolene</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <style>
         * {
             margin: 0;
@@ -48,13 +49,16 @@
             border: 2px solid #006400;
             border-radius: 12px;
             padding: 24px 32px;
-            font-size: 20px;
+            font-size: 32px;
             color: #ffffff;
             cursor: pointer;
             transition: all 0.3s ease;
             text-decoration: none;
-            display: block;
+            display: flex;
+            align-items: center;
+            justify-content: center;
             box-shadow: 0 4px 15px rgba(0, 100, 0, 0.3);
+            min-height: 80px;
         }
 
         .option-button:hover {
@@ -62,6 +66,10 @@
             border-color: #008000;
             transform: translateY(-2px);
             box-shadow: 0 6px 20px rgba(0, 100, 0, 0.5);
+        }
+
+        .option-button i {
+            font-size: 32px;
         }
 
         .modal {
@@ -240,6 +248,10 @@
 
         .playlist-container {
             margin-bottom: 30px;
+            border-radius: 12px;
+            border: 2px solid #006400;
+            overflow: hidden;
+            background: #000000;
         }
 
         .playlist-container:last-child {
@@ -248,8 +260,8 @@
 
         .playlist-container iframe {
             width: 100%;
-            border-radius: 12px;
-            border: 2px solid #006400;
+            display: block;
+            border: none;
         }
 
         .timeline-content {
@@ -322,12 +334,12 @@
     <div class="container">
         <h1>will + jolene</h1>
         <div class="options">
-            <button class="option-button" onclick="showWeather()">weather</button>
-            <button class="option-button" onclick="showPhotos()">photos</button>
-            <button class="option-button" onclick="showNotes()">notes</button>
-            <button class="option-button" onclick="showDistance()">distance</button>
-            <button class="option-button" onclick="showMusic()">music</button>
-            <button class="option-button" onclick="showTimeline()">timeline</button>
+            <button class="option-button" onclick="showWeather()" title="weather"><i class="fas fa-cloud"></i></button>
+            <button class="option-button" onclick="showPhotos()" title="photos"><i class="fas fa-camera"></i></button>
+            <button class="option-button" onclick="showNotes()" title="notes"><i class="fas fa-sticky-note"></i></button>
+            <button class="option-button" onclick="showDistance()" title="distance"><i class="fas fa-map-marker-alt"></i></button>
+            <button class="option-button" onclick="showMusic()" title="music"><i class="fas fa-music"></i></button>
+            <button class="option-button" onclick="showTimeline()" title="timeline"><i class="fas fa-calendar-alt"></i></button>
         </div>
     </div>
 
@@ -384,13 +396,13 @@
             <h2 class="modal-title">music</h2>
             <div id="musicContent" class="music-content">
                 <div class="playlist-container">
-                    <iframe data-testid="embed-iframe" style="border-radius:12px" src="https://open.spotify.com/embed/playlist/5jE1hOdhcEA9wl7LK8WZDV?utm_source=generator" width="100%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+                    <iframe data-testid="embed-iframe" style="border-radius:12px" src="https://open.spotify.com/embed/playlist/5jE1hOdhcEA9wl7LK8WZDV?utm_source=generator&theme=0" width="100%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
                 </div>
                 <div class="playlist-container">
-                    <iframe data-testid="embed-iframe" style="border-radius:12px" src="https://open.spotify.com/embed/playlist/7G5VgdvUREXtiLFPXSi3p3?utm_source=generator" width="100%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+                    <iframe data-testid="embed-iframe" style="border-radius:12px" src="https://open.spotify.com/embed/playlist/5JhcSZVG1LiAiEUCRvHJPR?utm_source=generator&theme=0" width="100%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
                 </div>
                 <div class="playlist-container">
-                    <iframe data-testid="embed-iframe" style="border-radius:12px" src="https://open.spotify.com/embed/playlist/5JhcSZVG1LiAiEUCRvHJPR?utm_source=generator" width="100%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
+                    <iframe data-testid="embed-iframe" style="border-radius:12px" src="https://open.spotify.com/embed/playlist/7G5VgdvUREXtiLFPXSi3p3?utm_source=generator&theme=0" width="100%" height="352" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
                 </div>
             </div>
         </div>
