--- a/index.html
+++ b/index.html
@@ -369,11 +369,6 @@
             <button class="close-button" onclick="closeModal('notesModal')">&times;</button>
             <h2 class="modal-title">notes</h2>
             <div id="notesContent" class="notes-content">
-                <div class="note-item">
-                    <h3>thoughts about when i met you</h3>
-                    <p style="margin-top: 10px; color: #666; font-size: 14px;">1/21/2026</p>
-                    <p style="margin-top: 15px;">when i met you in algebra 1, i genuinely thought you were like the sickest girl ever and the one person who could match my energy so unbelievably well to such a caliber i like wouldn't expect from someone. you were and are so smart, so funny, so kind, and i was blown away by how you treated others with so much care and respect.</p>
-                </div>
             </div>
         </div>
     </div>
@@ -414,6 +409,10 @@
             <button class="close-button" onclick="closeModal('timelineModal')">&times;</button>
             <h2 class="modal-title">timeline</h2>
             <div id="timelineContent" class="timeline-content">
+                <div class="timeline-item">
+                    <div class="timeline-date">2021</div>
+                    <div class="timeline-event">met jolene in algebra 2</div>
+                </div>
                 <div class="timeline-item">
                     <div class="timeline-date">may 2026</div>
                     <div class="timeline-event">will graduation</div>
