--- a/index.html
+++ b/index.html
@@ -379,6 +379,10 @@
             <button class="close-button" onclick="closeModal('notesModal')">&times;</button>
             <h2 class="modal-title">notes</h2>
             <div id="notesContent" class="notes-content">
+                <div class="note-item">
+                    <p style="margin-top: 10px; color: #666; font-size: 14px;">1/21/2026</p>
+                    <p style="margin-top: 15px;">love ya! keeping this so i can write notes here</p>
+                </div>
             </div>
         </div>
     </div>
@@ -422,6 +426,10 @@
                 <div class="timeline-item">
                     <div class="timeline-date">2021</div>
                     <div class="timeline-event">will + jolene met</div>
+                </div>
+                <div class="timeline-item">
+                    <div class="timeline-date">jan 17 2026</div>
+                    <div class="timeline-event">official</div>
                 </div>
                 <div class="timeline-item">
                     <div class="timeline-date">may 2026</div>
