--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             display: grid;
             grid-template-columns: repeat(3, 1fr);
             gap: 15px;
-            margin-top: 40px;
+            margin: 40px auto 0;
             max-width: 500px;
             width: 100%;
         }
